[gd_scene load_steps=14 format=2]

[ext_resource path="res://escenas/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://escenas/enemigos/diabolo_g/DiaboloG.tscn" type="PackedScene" id=2]
[ext_resource path="res://escenas/enemigos/diabolo_m/DiaboloM.tscn" type="PackedScene" id=3]
[ext_resource path="res://escenas/enemigos/diabolo_saltarin/DiaboloSaltarin.tscn" type="PackedScene" id=4]
[ext_resource path="res://escenas/fondos/fondo-nivel-2.tscn" type="PackedScene" id=5]
[ext_resource path="res://escenas/nivel_2/Nivel2.gd" type="Script" id=6]
[ext_resource path="res://escenas/ui_vidas/UIVidas.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/Sonidos_dos/Dee_Yan-Key_-_01_-_My_Day.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/Unicorn_Pop.otf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/menu_principal/boton_salir.png" type="Texture" id=10]
[ext_resource path="res://assets/Sonidos_dos/boton_opcion_5.ogg" type="AudioStream" id=11]
[ext_resource path="res://assets/Fondo_Nivel_2/fond2.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 70
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="nivel_2" type="Node2D"]
script = ExtResource( 6 )

[node name="fondo2" parent="." instance=ExtResource( 5 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 56, 72 )
scale = Vector2( 0.2, 0.2 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 3 )]
light_mask = 4
position = Vector2( 1806.41, -379.096 )

[node name="KinematicBody2D2" parent="." instance=ExtResource( 2 )]
light_mask = 4
position = Vector2( 817.416, -413.811 )

[node name="Node2D" parent="." instance=ExtResource( 4 )]
light_mask = 4
position = Vector2( 3087.88, -258.884 )

[node name="DiaboloM" parent="." instance=ExtResource( 3 )]
position = Vector2( 1691.9, 302.438 )

[node name="DiaboloM5" parent="." instance=ExtResource( 3 )]
position = Vector2( 1207.77, 305.691 )

[node name="DiaboloM6" parent="." instance=ExtResource( 3 )]
position = Vector2( 1986.44, -217.244 )

[node name="DiaboloM4" parent="." instance=ExtResource( 3 )]
position = Vector2( 1624.22, -387.267 )

[node name="DiaboloM2" parent="." instance=ExtResource( 3 )]
position = Vector2( 2147.4, -303.721 )

[node name="DiaboloM3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1983.3, -373.554 )

[node name="DiaboloG" parent="." instance=ExtResource( 2 )]
position = Vector2( 1014.95, -262.895 )

[node name="DiaboloG8" parent="." instance=ExtResource( 2 )]
position = Vector2( 837.538, -270.287 )

[node name="DiaboloG2" parent="." instance=ExtResource( 2 )]
position = Vector2( 844.93, -137.226 )

[node name="DiaboloG4" parent="." instance=ExtResource( 2 )]
position = Vector2( 652.731, -122.442 )

[node name="DiaboloG5" parent="." instance=ExtResource( 2 )]
position = Vector2( 637.946, -403.349 )

[node name="DiaboloG6" parent="." instance=ExtResource( 2 )]
position = Vector2( 637.946, -262.895 )

[node name="DiaboloG7" parent="." instance=ExtResource( 2 )]
position = Vector2( 2493.83, 286.022 )

[node name="DiaboloG3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1009.68, -401.185 )

[node name="DiaboloSaltarin" parent="." instance=ExtResource( 4 )]
position = Vector2( 3107.98, -414.68 )

[node name="DiaboloSaltarin3" parent="." instance=ExtResource( 4 )]
position = Vector2( 3107.98, -414.68 )

[node name="DiaboloSaltarin4" parent="." instance=ExtResource( 4 )]
position = Vector2( 3409.95, -253.158 )

[node name="DiaboloSaltarin5" parent="." instance=ExtResource( 4 )]
position = Vector2( 3424, -407.657 )

[node name="DiaboloSaltarin6" parent="." instance=ExtResource( 4 )]
position = Vector2( 3255.45, -260.181 )

[node name="DiaboloSaltarin2" parent="." instance=ExtResource( 4 )]
position = Vector2( 3257.9, -402.428 )

[node name="Ui" type="CanvasLayer" parent="."]

[node name="UIVidas" parent="Ui" instance=ExtResource( 7 )]
margin_bottom = 200.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="Soundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="gatcies" type="CanvasLayer" parent="."]

[node name="Salir" type="TextureButton" parent="gatcies"]
visible = false
margin_left = 513.232
margin_top = 430.346
margin_right = 1013.23
margin_bottom = 680.346
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="gatcies"]
visible = false
margin_left = 261.982
margin_top = 102.203
margin_right = 1141.98
margin_bottom = 275.203
custom_fonts/font = SubResource( 1 )
text = "Â¡Gracias por jugar esta demo!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SonidoBoton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 12.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3105.97, 1081.08 )
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 13919.6, 1081.08 )
texture = ExtResource( 12 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 12818, 1061 )
texture = ExtResource( 12 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 11754.1, 1081.08 )
texture = ExtResource( 12 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 10653.3, 1066.91 )
texture = ExtResource( 12 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 9557, 1069.35 )
texture = ExtResource( 12 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 8477.92, 1069.35 )
texture = ExtResource( 12 )

[node name="Sprite8" type="Sprite" parent="."]
position = Vector2( 7399.73, 1072.46 )
texture = ExtResource( 12 )

[node name="Sprite9" type="Sprite" parent="."]
position = Vector2( 6313.36, 1089.71 )
texture = ExtResource( 12 )

[node name="Sprite10" type="Sprite" parent="."]
position = Vector2( 5240.86, 1088.11 )
texture = ExtResource( 12 )

[node name="Sprite11" type="Sprite" parent="."]
position = Vector2( 4180.44, 1088.11 )
texture = ExtResource( 12 )
[connection signal="button_down" from="gatcies/Salir" to="." method="_on_Salir_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
